objects/simplesurvey__Simple_Survey_Insight__c.object
<CustomObject>
    <fields>
        <fullName>simplesurvey__Date_Range_Text__c</fullName>
        <label>Date Range Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Date_Range_Type__c</fullName>
        <label>Date Range Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relative Date Range</fullName>
                </value>
                <value>
                    <fullName>Specific Date Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Date_Range__c</fullName>
        <label>Date Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Configuration</label>
        <referenceTo>simplesurvey__Survey_Configuration__c</referenceTo>
        <relationshipLabel>Simple Survey Insights</relationshipLabel>
        <relationshipName>Simple_Survey_Insights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Record_Owner_Type__c</fullName>
        <label>Survey Record Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Record Owners</fullName>
                </value>
                <value>
                    <fullName>My Surveys</fullName>
                </value>
                <value>
                    <fullName>Specific Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Record_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Simple_Survey_Insights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Record_Type_Id__c</fullName>
        <label>Survey Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Record_Type_Name__c</fullName>
        <label>Survey Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NPS Score</fullName>
                </value>
                <value>
                    <fullName>1-5 Stars</fullName>
                </value>
                <value>
                    <fullName>Thumbs Up/Down</fullName>
                </value>
                <value>
                    <fullName>Questionnaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Simple Survey Insight</label>
    <listViews>
        <fullName>simplesurvey__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simple Survey Insights</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>